--- a/bvn-cuoikhoa/index.html
+++ b/bvn-cuoikhoa/index.html
@@ -48,7 +48,7 @@
           <div class="header-menu">
             <h5>Jewelry & Accessories</h5>
             <h5>Clothing & Shoes</h5>
-            <h5>Home & living</h5>
+            <h5>Home & Living</h5>
             <h5>Wedding & Party</p>
             <h5>Toys & Entertainment</h5>
             <h5>Art & Colletubles</h5>
@@ -57,7 +57,7 @@
 
           <div class="header-content">
             <div class="header-content-left">
-              <h2>Collections</h2>
+              <h1>Collections</h1>
               <p>
                 You Can Explore Ans Shop Many Differnt Collection From Various
                 Barands Here.
@@ -101,7 +101,7 @@
               </div>
             </div>
           </div>
-
+        
           <div class="newsletter">
             <div class="container">
               <div class="newsletter-text">
