--- a/bvn-cuoikhoa/index.html
+++ b/bvn-cuoikhoa/index.html
@@ -306,10 +306,10 @@
 
                 <div class="footer-content-coral-left-icon">
                   <div class="footer-content-coral-left-icon-main">
-                    <img src="./assets/images/v6-icon1.png" alt="facebook-logo">
-                    <img src="./assets/images/v6-icon2.png" alt="twiter-logo">
-                    <img src="./assets/images/v6-icon3.png" alt="linkedin-logo">
-                    <img src="./assets/images/v6-icon4.png" alt="instagram-logo">
+                    <img src="./assets/images/v6-icon1.png" alt="v6-icon1">
+                    <img src="./assets/images/v6-icon2.png" alt="v6-icon2">
+                    <img src="./assets/images/v6-icon3.png" alt="v6-icon3">
+                    <img src="./assets/images/v6-icon4.png" alt="v6-icon4">
                   </div>
                 </div>
               </div>
@@ -377,6 +377,6 @@
     <script src="./lib/Owlcarousel/owl.carousel.min.js"></script>
 
     <!-- import custom.js -->
-    <script src="./assets/js/custom.js"></script>
+    <script src="./assets/js/slide.js"></script>
   </body>
 </html>
