--- a/bvn-cuoikhoa/index.html
+++ b/bvn-cuoikhoa/index.html
@@ -230,23 +230,23 @@
                   <div class="newsletter-best-celler-list-celler">
                     <div class="row">
                       <div class="column">
-                        <div class="degis">
+                        <div class="degisn">
                           <img src="./assets/images/card10.png" alt="card10" />
                         </div>
                       </div>
                       <div class="column">
-                        <div class="degis">
+                        <div class="degisn">
                           <img src="./assets/images/card7.png" alt="card7" />
                         </div>
                       </div>
                       <div class="column">
-                        <div class="degis">
+                        <div class="degisn">
                           <img src="./assets/images/card9.png" alt="card9" />
                         </div>
                       </div>
 
                       <div class="column">
-                        <div class="degis">
+                        <div class="degisn">
                           <img src="./assets/images/card11.png" alt="card11" />
                         </div>
                       </div>
