--- a/bvn-cuoikhoa/index.html
+++ b/bvn-cuoikhoa/index.html
@@ -58,17 +58,20 @@
           <div class="header-content">
             <div class="header-content-left">
               <h1>Collections</h1>
-              <p>
-                You Can Explore Ans Shop Many Differnt Collection From Various
-                Barands Here.
-              </p>
-              <button><i class="fa-solid fa-bag-shopping"> Shop Now</i></button>
+              <div class="header-content-vector-left">
+                <img src="./assets/images/vector(1).png" alt="Vector(1)">
+              </div>
+
+              <p>You Can Explore Ans Shop Many Differnt Collection From Various
+                Barands Here.</p>
+            <button><i class="fa-solid fa-bag-shopping"> Shop Now</i></button>
             </div>
+
             <div class="header-content-right">
               <img src="./assets/images/image1.png" alt="logo" />
             </div>
-            <div class="header-content-vector">
-              <img src="./assets/images/vector(2).png" alt="Vector" />
+            <div class="header-content-vector-right">
+              <img src="./assets/images/vector(2).png" alt="Vector(2)" />
             </div>
           </div>
         </div>
@@ -176,21 +179,12 @@
             
                 <div class="container">
                   <div class="newsletter-background-main">
-                    <img
-                      src="./assets/images/image2.png"
-                      alt=""
-                    />
+                    <img src="./assets/images/image2.png" alt=""/>
                     <div class="newsletter-background-main-zara-center">
-                      <img
-                        src="./assets/images/Zara_Logo 1.png"
-                        alt="logo-1"
-                      />
+                      <img src="./assets/images/Zara_Logo 1.png" alt="logo-1"/>
                     </div>
                     <div class="newsletter-background-main-zara-right">
-                      <img
-                        src="./assets/images/Zara_Logo 2.png"
-                        alt="logo-2"
-                      />
+                      <img src="./assets/images/Zara_Logo 2.png" alt="logo-2"/>
                     </div>
 
                     <div class="newsletter-background-main-text">
@@ -230,23 +224,23 @@
                   <div class="newsletter-best-celler-list-celler">
                     <div class="row">
                       <div class="column">
-                        <div class="degisn">
+                        <div class="degis">
                           <img src="./assets/images/card10.png" alt="card10" />
                         </div>
                       </div>
                       <div class="column">
-                        <div class="degisn">
+                        <div class="degis">
                           <img src="./assets/images/card7.png" alt="card7" />
                         </div>
                       </div>
                       <div class="column">
-                        <div class="degisn">
+                        <div class="degis">
                           <img src="./assets/images/card9.png" alt="card9" />
                         </div>
                       </div>
 
                       <div class="column">
-                        <div class="degisn">
+                        <div class="degis">
                           <img src="./assets/images/card11.png" alt="card11" />
                         </div>
                       </div>
@@ -297,11 +291,9 @@
                   <img src="./assets/images/GroupCoral.png" alt="GroupCoral" />
                 </div>
                 <div class="footer-content-coral-left-text">
-                  <span
-                    >Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                  <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
                     sed do eiusmod tempor incididunt ut labore et dolore magna
-                    aliqua</span
-                  >
+                    aliqua</span>
                 </div>
 
                 <div class="footer-content-coral-left-icon">
@@ -359,7 +351,7 @@
               </div>
 
               <div class="footer-icon-bottom-center">
-                <img src="./assets/images/icon-pay.png" alt="1" />
+                <img src="./assets/images/icon-pay.png" alt="icon-pay" />
               </div>
 
               <div class="footer-icon-bottom-right">
@@ -371,6 +363,21 @@
         </div>
       </div>
     </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    
     <!-- import jquery -->
     <script src="./lib/jquery-3.7.1.min.js"></script>
     <!-- import owlcarosel -->
